2026-02-12  Araki Ken  <arakiken@users.sf.net>

	* drcssixel-v3.c: Fix carry over not to exceed 0x10ffff.

2026-02-08  Araki Ken  <arakiken@users.sf.net>

	* mlterm.1, README.ja, PROTOCOL: Update.

	* ui_main_config.c: Add --crsz / cursor_size option.

	* ui_screen.c: Add "cursor_size" to ui_screen_set_config().

	* test.c: Add TEST_ui_display().

	* fb/ui_display.c, ui_display.h:
	  - Add make_cursor_shape() to generate cursor shape information
	    according to its size dynamically.
	  - Add ui_display_set_cursor_size().

	* android/jni/ui_display.c: Remove ui_display_rotate().

	* vterm.c: Enclose vterm_state_set_selection_callbacks() by
	  VERSION_CHECK_VERSION2(0, 2).

2026-02-08  Araki Ken  <arakiken@users.sf.net>

	* vterm.c:
	  - Check if a member of VTermScreenCallbacks is NULL.
	  - Fix type cast error in vterm_state_get_cursorpos().
	  - Add vterm_color_is_equal() and vterm_state_set_selection_callbacks().

	* bl_str.c: bl_str_unescape() supports 0XX (octal digits).

2026-01-25  Araki Ken  <arakiken@users.sf.net>

	* tool/mlimgloader/Makefile.in:
	  Add LIBS2_quartz_gdk-pixbuf and LIBS2_quartz_libpng.

	* configure.in: Add X_CFLAGS to X_CFLAGS_AUX before X_CFLAGS="" for
	  mlimagloader to be build with xlib in quartz.
	  (mlimgloader is not build in quartz, but if multiple values including
	   "quartz" is specified to --with-gui option, mlimgloader is build
	   by gui_for_tool="xlib".)
	  (https://github.com/arakiken/mlterm/issues/157)

2025-12-31  Araki Ken  <arakiken@users.sf.net>

	* xlib/ui_connect_dialog.c: Fix how elapsed time is calculated with
	  gettimeofday().

2025-12-31  Araki Ken  <arakiken@users.sf.net>

	* ci.yml: macos-13 -> macos-14

	* xlib/ui_connect_dialog.c: The event loop is not terminated until 1
	  sec has elapsed.

	* c_pixel.c: Fix illegal memory access in TEST_sixel_realloc_pixels().

	* vt_parser.c: Fix parsing iso2022 in parse_vt100_escape_sequence().

2025-12-30  Araki Ken  <arakiken@users.sf.net>
